# sharepoint_timesheet_bot

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  com.darren.timesheet-bot.plist  config.yaml  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
bot/: __init__.py  browser.py  config.py  holidays.py  runner.py  timesheet.py
scripts/: debug_edit_page.py  debug_right_pane.py  install_launchagent.sh  run_timesheet.sh  test_fill_timesheet.py  test_open_site.py  test_open_timesheet.py  uninstall_launchagent.sh
