[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sharepoint-timesheet-bot"
version = "0.3.0"
description = "Automates filling out weekly timesheets on SharePoint PWA"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "Darren" },
]
dependencies = [
    "playwright>=1.40.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0",
    "click>=8.1.0",
]

[project.optional-dependencies]
dev = [
    "commitizen>=4.0.0",
    "pre-commit>=3.0.0",
]

[project.scripts]
timesheet-bot = "main:cli"

# -- Commitizen ---------------------------------------------------------------
[tool.commitizen]
name = "cz_conventional_commits"
version = "0.3.0"
version_files = [
    "pyproject.toml:^version",
]
tag_format = "$version"
update_changelog_on_bump = false
major_version_zero = true
